--- a/src/pages/officers.astro
+++ b/src/pages/officers.astro
@@ -33,11 +33,10 @@ import officers from '../data/officers.json';
               target="_blank" 
               rel="noopener noreferrer"
               >
-              <svg xmlns="http://www.w3.org/2000/svg" class="w-4 h-4 mr-2" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z" />
-                <polyline points="22,6 12,13 2,6" />
-              </svg>
-              LinkedIn
+                <svg xmlns="http://www.w3.org/2000/svg" class="w-4 h-4 mr-2" viewBox="0 0 24 24" fill="currentColor">
+                  <path d="M22.23 0H1.77C.8 0 0 .8 0 1.77v20.46C0 23.2.8 24 1.77 24h20.46c.97 0 1.77-.8 1.77-1.77V1.77C24 .8 23.2 0 22.23 0zM7.19 20.45H3.56V9h3.63v11.45zM5.38 7.58c-1.16 0-2.1-.94-2.1-2.1 0-1.16.94-2.1 2.1-2.1 1.16 0 2.1.94 2.1 2.1 0 1.16-.94 2.1-2.1 2.1zM20.45 20.45h-3.63v-5.63c0-1.34-.02-3.06-1.86-3.06-1.87 0-2.16 1.46-2.16 2.96v5.73H9.18V9h3.48v1.56h.05c.49-.93 1.7-1.92 3.5-1.92 3.74 0 4.43 2.46 4.43 5.65v6.16z"/>
+                </svg>
+                LinkedIn
               </a>
               <a 
                 href={`mailto:${officer.email}`} 
