--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -2,6 +2,7 @@
 const navItems = [
   { href: '/', text: 'Home' },
   { href: '/officers', text: 'Officers' },
+  { href: '/challenges', text: 'Challenges' },
   { href: '/faq', text: 'FAQ' },
 ];
 ---
