--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
-import Navigation from '../components/Navigation.astro';
-import Footer from '../components/Footer.astro';
+import Navigation from "../components/Navigation.astro";
+import Footer from "../components/Footer.astro";
+import ParticlesBackground from "../components/ParticlesBackground.jsx";
 
 interface Props {
   title: string;
@@ -13,7 +14,9 @@ const { title } = Astro.props;
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{title} | Google Developer Group on Campus - Oregon State University</title>
+    <title>
+      {title} | Google Developer Group on Campus - Oregon State University
+    </title>
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   </head>
   <body class="flex flex-col min-h-screen bg-gray-50">
