--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,9 @@
 ---
 import Navigation from "../components/Navigation.astro";
 import Footer from "../components/Footer.astro";
-import ParticlesBackground from "@/components/background";
+// import ParticlesBackground from "@/components/background";
+import BouncingBall from "../components/BouncingBall";
+import BlurBackground from "@/components/BlurBackground";
 
 interface Props {
   title: string;
@@ -20,6 +22,9 @@ const { title } = Astro.props;
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   </head>
   <body class="flex flex-col min-h-screen bg-gray-50">
+    <BlurBackground />
+    <BouncingBall client:only />
+    <BouncingBall client:only />
     <Navigation />
     <main class="flex-grow container mx-auto px-4 py-8">
       <slot />
