--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -24,7 +24,7 @@ const { title } = Astro.props;
   <body class="flex flex-col min-h-screen bg-gray-50">
     <BlurBackground />
     <BouncingBall client:only />
-    <BouncingBall client:only />
+    <!-- <BouncingBall client:only /> -->
     <Navigation />
     <main class="flex-grow container mx-auto px-4 py-8">
       <slot />
