Set up fetcher and config file, thanks Tom XD

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,11 +1,10 @@
 ---
 const navItems = [
-
-  { href: '/', text: 'Home' },
-  { href: '/officers', text: 'Officers' },
-  { href: '/challenges', text: 'Challenges' },
-  { href: '/faq', text: 'FAQ' },
-
+  { href: "/", text: "Home" },
+  { href: "/officers", text: "Officers" },
+  // {href: '/blog', text: }
+  { href: "/challenge", text: "Challenge" },
+  { href: "/faq", text: "FAQ" },
 ];
 ---
 
