--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -166,7 +166,7 @@ import { Button } from "../components/ui/button.tsx";
         <div class="bg-white rounded-lg shadow-md overflow-hidden">
           <div class="flex justify-center items-center m-5">
             <img
-              src="/Angular_full_color_logo.svg"
+              src="/Angular.svg"
               alt="Descriptive text for accessibility"
               class="h-48 object-contain"
             />
