--- a/src/pages/challenge/index.astro
+++ b/src/pages/challenge/index.astro
@@ -1,10 +1,19 @@
 ---
 import Layout from "@/layouts/Layout.astro";
 import { getPosts } from "@/lib/fetcher";
-
+import BlogCard from "@/components/BlogCard.astro";
 const posts = await getPosts();
 ---
 
 <Layout title="Blog">
-  <section class="container py-10"></section>
+  <section class="container py-10">
+    <h2 class="text-7xl font-bold text-center mt-12 mb-20">
+      Winter Challenges
+    </h2>
+    <div
+      class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-x-6 gap-y-9 md:gap-y-11 lg:gap-y-16 lg:gap-x-8"
+    >
+      {posts.map((post) => <BlogCard {...post} />)}
+    </div>
+  </section>
 </Layout>
