--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -163,7 +163,7 @@ import { Button } from "../components/ui/button.tsx";
         Introducing Our Winter Term Challenges
       </h2>
       <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-        <a href={`/challenge/angular/`}>
+        <a href={`/blog/angular/`}>
           <div class="bg-white rounded-lg shadow-md overflow-hidden">
             <div class="flex justify-center items-center m-5">
               <img
@@ -197,7 +197,7 @@ import { Button } from "../components/ui/button.tsx";
             </div>
           </div>
         </a>
-        <a href={`/challenge/flutter/`}>
+        <a href={`/blog/flutter/`}>
         <div class="bg-white rounded-lg shadow-md overflow-hidden">
           <div class="flex justify-center items-center m-5">
             <img
@@ -231,7 +231,7 @@ import { Button } from "../components/ui/button.tsx";
           </div>
         </div>
         </a>
-        <a href={`/challenge/firebase/`}>
+        <a href={`/blog/firebase/`}>
         <div class="bg-white rounded-lg shadow-md overflow-hidden">
           <div class="flex justify-center items-center m-5">
             <img
