--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -2,8 +2,8 @@
 const navItems = [
   { href: "/", text: "Home" },
   { href: "/officers", text: "Officers" },
-  // {href: '/blog', text: }
-  { href: "/challenge", text: "Challenge" },
+  { href: "/blog", text: "Blog" },
+  { href: "/challenges", text: "Challenges" },
   { href: "/faq", text: "FAQ" },
 ];
 ---
