--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -32,7 +32,7 @@ const { Content } = await Astro.props.render();
       class="relative container max-w-screen-md mx-auto px-4 sm:px-6 lg:px-8 py-10"
     >
       <a
-        href="/src/pages/blog"
+        href="/blog"
         class={cn(
           buttonVariants({ variant: "ghost" }),
           "absolute left-[-200px] top-10 hidden xl:inline-flex bg-gray-50 text-muted-foreground hover:bg-gray-100"
