--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,6 +20,9 @@ const { title } = Astro.props;
       {title} | Google Developer Group on Campus - Oregon State University
     </title>
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <script type="text/javascript"
+      src="http://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+    </script> 
   </head>
   <body class="flex flex-col min-h-screen bg-gray-50">
     <BlurBackground />
